<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white0"
        android:orientation="vertical">

        <!-- 标题 -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_detail_task_item_height">

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/create_detail_task_hint_title"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

            <!-- 清除内容 -->
            <TextView
                android:id="@+id/txt_clear_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/selector_create_detail_task_clear_text"
                android:visibility="gone"/>

        </FrameLayout>

        <View
            style="@style/CommonLine.Horizontal"
            android:layout_marginLeft="15dp"/>

        <!-- 开始时间 -->
        <LinearLayout
            android:id="@+id/llt_start_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_detail_task_item_height"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/create_detail_task_label_start_time"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txt_start_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@color/white0"
        android:orientation="vertical">

        <!-- 地点 -->
        <LinearLayout
            android:id="@+id/llt_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_detail_task_item_height"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/create_detail_task_label_location"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

        </LinearLayout>

        <View
            style="@style/CommonLine.Horizontal"
            android:layout_marginLeft="15dp"
            android:visibility="gone"/>

        <!-- 重要等级 -->
        <LinearLayout
            android:id="@+id/llt_level"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_detail_task_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/create_detail_task_label_level"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txt_level"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black5"
                android:textSize="@dimen/font_size_15"/>

            <RatingBar
                android:id="@+id/rtb_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="4"
                android:rating="1"
                android:stepSize="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>